# xpo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/xpo-client/: Cargo.toml
crates/xpo-client/src/: auth.rs  error_page.rs  hmr.rs  list.rs  main.rs  subdomains.rs  tunnel.rs  uninstall.rs  update.rs  wait.rs
crates/xpo-client/src/dev/: ca.rs  doctor.rs  hosts.rs  mod.rs  proxy.rs  setup.rs  stop.rs  uninstall.rs
crates/xpo-core/: Cargo.toml
crates/xpo-core/src/: auth.rs  config.rs  error.rs  error_page.rs  http.rs  lib.rs  protocol.rs
crates/xpo-server/: Cargo.toml
crates/xpo-server/src/: acme.rs  config.rs  http.rs  main.rs  reserved_subdomains.txt  state.rs  supabase.rs  tls.rs  ws.rs
crates/xpo-tui/: Cargo.toml
crates/xpo-tui/src/: app.rs  event.rs  lib.rs  list_app.rs  model.rs  render.rs  subdomains_app.rs  theme.rs
crates/xpo-tui/src/widgets/: banner.rs  detail_panel.rs  doctor.rs  help_overlay.rs  keybinds.rs  list_table.rs  log_table.rs  mod.rs  qr_panel.rs  sparkline.rs  stats_bar.rs
deploy/: setup-server.sh  upgrade-server.sh  xpo-server.service
deploy/sql/: 001-user-entitlements.sql
scripts/: install.sh
