[workspace]
resolver = "2"
members = [
    "crates/xpo-core",
    "crates/xpo-client",
    "crates/xpo-server",
]

[workspace.package]
version = "0.2.14-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/xpo-sh/xpo"
homepage = "https://xpo.sh"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
