[package]
name = "xpo"
description = "Expose local services via secure tunnels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tunnel", "localhost", "expose", "proxy", "dev"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "xpo"
path = "src/main.rs"

[dependencies]
xpo-core = { path = "../xpo-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
time = "0.3"
console = "0.15"
indicatif = "0.17"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
