[package]
name = "xpo"
description = "Expose local services via secure tunnels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tunnel", "localhost", "expose", "proxy", "dev"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "xpo"
path = "src/main.rs"

[dependencies]
xpo-core = { path = "../xpo-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
time = "0.3"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
terminal_size = "0.4"
futures-util = "0.3"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
rand = "0.9"
