[package]
name = "xpo-core"
description = "Shared protocol, types, and auth for xpo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
