[package]
name = "xpo-server"
description = "Edge server for xpo.sh tunneling service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "xpo-server"
path = "src/main.rs"

[dependencies]
xpo-core = { path = "../xpo-core" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
