[package]
name = "xpo-server"
description = "Edge server for xpo.sh tunneling service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "xpo-server"
path = "src/main.rs"

[dependencies]
xpo-core = { path = "../xpo-core" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
tokio-tungstenite = "0.28"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
futures-util = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-pki-types = "1"
rcgen = { version = "0.14", features = ["pem"] }
instant-acme = { version = "0.8", features = ["rcgen"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
